--- a/package.json
+++ b/package.json
@@ -12,7 +12,12 @@
     "lint": "eslint -c .eslintrc.js \"{server, test}/**/*.{js,ts,tsx}\" --quiet",
     "lint:fix": "eslint -c .eslintrc.js \"{server, test}/**/*.{js,ts,tsx}\" --quiet --fix",
     "test": "mocha -r ts-node/register test/**/*.ts --exit",
-    "test:debug": "mocha -r ts-node/register --inspect-brk test/**/*.ts --exit"
+    "test:debug": "mocha -r ts-node/register --inspect-brk test/**/*.ts --exit",
+    "postinstall": "npm run compile"
+  },
+  "engines": {
+    "node": "12.16.x",
+    "npm": "6.14.x"
   },
   "dependencies": {
     "body-parser": "^1.19.0",
@@ -27,10 +32,10 @@
     "@types/express": "^4.17.7",
     "@types/mocha": "^8.0.3",
     "@types/pino": "^6.3.0",
-    "@typescript-eslint/eslint-plugin": "^3.9.1",
-    "@typescript-eslint/parser": "^3.9.1",
+    "@typescript-eslint/eslint-plugin": "^4.1.0",
+    "@typescript-eslint/parser": "^4.1.0",
     "chai": "^4.2.0",
-    "eslint": "^7.7.0",
+    "eslint": "^7.9.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-prettier": "^3.1.4",
     "mocha": "^8.1.1",
