--- a/package.json
+++ b/package.json
@@ -20,12 +20,17 @@
     "npm": "6.14.x"
   },
   "dependencies": {
+    "@types/cookie-parser": "^1.4.2",
+    "@types/multer": "^1.4.4",
+    "@types/shelljs": "^0.8.8",
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "pino": "^6.5.1",
-    "express-openapi-validator": "^3.16.11"
+    "express-openapi-validator": "^3.16.11",
+    "moment": "^2.28.0",
+    "multer": "^1.4.2",
+    "pino": "^6.5.1"
   },
   "devDependencies": {
     "@types/chai": "^4.2.12",
