--- a/server/common/api.yml
+++ b/server/common/api.yml
@@ -4,17 +4,17 @@ info:
   description: File server for BMFAudio device records menage.
   version: 1.0.0
 servers:
-- url: /api/v1
+  - url: /api/v1
 tags:
-- name: Examples
-  description: Simple example endpoints
-- name: Specification
-  description: The swagger API specification
+  - name: Examples
+    description: Simple example endpoints
+  - name: Specification
+    description: The swagger API specification
 paths:
   /examples:
     get:
       tags:
-      - Examples
+        - Examples
       description: Fetch all examples
       responses:
         200:
@@ -22,7 +22,7 @@ paths:
           content: {}
     post:
       tags:
-      - Examples
+        - Examples
       description: Create a new example
       requestBody:
         description: an example
@@ -38,14 +38,14 @@ paths:
   /examples/{id}:
     get:
       tags:
-      - Examples
+        - Examples
       parameters:
-      - name: id
-        in: path
-        description: The id of the example to retrieve
-        required: true
-        schema:
-          type: integer
+        - name: id
+          in: path
+          description: The id of the example to retrieve
+          required: true
+          schema:
+            type: integer
       responses:
         200:
           description: Return the example with the specified id
@@ -56,17 +56,34 @@ paths:
   /spec:
     get:
       tags:
-      - Specification
+        - Specification
       responses:
         200:
           description: Return the API specification
           content: {}
+  /records:
+    get:
+      tags:
+        - Records
+      description: Fetch all files
+      responses:
+        200:
+          description: Returns files list
+          content: {}
+    post:
+        tags:
+          - Records
+        description: Save the file
+        responses:
+          200:
+            description: Returns done
+            content: {}
 components:
   schemas:
     ExampleBody:
       title: example
       required:
-      - name
+        - name
       type: object
       properties:
         name:
