--- a/package.json
+++ b/package.json
@@ -20,10 +20,11 @@
     "npm": "6.14.x"
   },
   "dependencies": {
+    "@types/archiver": "^3.1.0",
     "@types/cookie-parser": "^1.4.2",
     "@types/multer": "^1.4.4",
     "@types/shelljs": "^0.8.8",
-    "shelljs": "^0.8.4",
+    "archiver": "^5.0.2",
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.5",
     "dotenv": "^8.2.0",
@@ -31,7 +32,8 @@
     "express-openapi-validator": "^3.16.11",
     "moment": "^2.28.0",
     "multer": "^1.4.2",
-    "pino": "^6.5.1"
+    "pino": "^6.5.1",
+    "shelljs": "^0.8.4"
   },
   "devDependencies": {
     "@types/chai": "^4.2.12",
