--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "archiver": "^5.0.2",
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.5",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-openapi-validator": "^3.16.11",
@@ -37,6 +38,7 @@
   },
   "devDependencies": {
     "@types/chai": "^4.2.12",
+    "@types/cors": "^2.8.9",
     "@types/express": "^4.17.7",
     "@types/mocha": "^8.0.3",
     "@types/pino": "^6.3.0",
